appId: app.phraseman
---
- extendedWaitUntil:
    visible:
      id: "trainer-quick-report-preview"
    timeout: 30000
- tapOn:
    id: "trainer-quick-report-preview"
    waitToSettleTimeoutMs: 1000
- waitForAnimationToEnd:
    timeout: 5000
- extendedWaitUntil:
    visible:
      id: "screen-trainer-smart-session"
    timeout: 30000
- takeScreenshot: trainer_qa_report_preview
